[package]
name = "bvp-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raw2bvp"
path = "src/raw2bvp.rs"

[dependencies]
tinyjson = "2.5.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }