[package]
name = "bvp-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raw2bvp"
path = "src/raw2bvp/main.rs"

[[bin]]
name = "bvp2raw"
path = "src/bvp2raw.rs"

[lib]
name = "bvp"
path = "src/lib/lib.rs"

[dependencies]
tinyjson = "2.5.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
chrono = { version = "0.4.26", features = ["clock"] }
thiserror = "1.0.40"
num-traits = "0.2.15"
crc32fast = "1.3.2"
crossbeam = "0.8.2"
itertools = "0.10.5"
zip = "0.6.6"
